# code-agent-monitor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
design/: ai-prompts.md  cam-start-command.md  e2e-test-plan.md  react-extractor.md
docs/: debugging.md  development.md  fix-notification-content-loss.md  fix-notification-log-loss.md  multi-worktree-development-README.md  notification-ux.md  testing.md  unified-status-migration-README.md  worktree-team-coordination.md
findings/: cc-e2e-result.md  cc-integration-validation.md  cc-vs-codex-comparison.md  claude-code-format.md  claude-code-startup.md  cli-structure.md  codex-e2e-result.md  codex-fix-verification.md  codex-format.md  codex-integration-validation.md  codex-startup.md  codex-trust-dialog.md  dingtalk-ai-card-empty-content.md  e2e-test-report.md  error-handling-test.md  fix-verification.md  performance-benchmark.md  skill-analysis.md  unit-test-report.md  ux-test-report.md  webhook-flow.md
scripts/: restart-openclaw.sh
skills/: SKILL.md
src/: agent.rs  agent_watcher.rs  ai_quality.rs  ai_types.rs  anthropic.rs  conversation_state.rs  embedding.rs  input_detector.rs  jsonl_parser.rs  lib.rs  main.rs  mcp.rs  notification_summarizer.rs  notify.rs  openclaw_notifier.rs  process.rs  session.rs  task_list.rs  terminal_utils.rs  throttle.rs  tmux.rs  watcher_daemon.rs
tests/: agent_module_test.rs  ai_client_test.rs  ai_types_test.rs  e2e.rs  extractor_test.rs  infra_test.rs  input_detector_test.rs  integration_test.rs  no_hardcoded_notify_target.rs  session_module_test.rs  watcher_test.rs  (+3 more)
(+154 files in other folders)
