[package]
name = "code-agent-monitor"
version = "0.1.0"
edition = "2021"
description = "Monitor and manage AI coding agent processes (Claude Code, OpenCode, Codex)"
authors = ["Shawn Ng"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.31"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "code_agent_monitor"
path = "src/lib.rs"

[[bin]]
name = "cam"
path = "src/main.rs"
